Add distribution management to pom.xml
Added distribution management for release and snapshot repositories.

--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,20 @@
         </dependencies>
     </dependencyManagement>
 
+        <distributionManagement>
+        <!-- Release repository -->
+        <repository>
+            <id>nexus-releases</id>
+            <url>http://nexus:8081/repository/maven-releases/</url>
+        </repository>
+
+        <!-- Snapshot repository -->
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <url>http://nexus:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <build>
         <pluginManagement>
             <plugins>
